--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 */
 
 /*--------------------------------------------------------------
-# General
+# MARK General
 --------------------------------------------------------------*/
 
 /* Scrollbar styles */
@@ -180,17 +180,28 @@ Pre-loader Style
 
 
 /*--------------------------------------------------------------
-# Header
+# MARK Header
 --------------------------------------------------------------*/
 #header {
-  background-color: #1F2122;
+  background: #1F2122;
   transition: ease-in-out 0.3s;
   position: relative;
-  height: 100vh;
+  height: 82vh;
   display: flex;
   align-items: center;
   z-index: 997;
   overflow: hidden;
+  margin-top: 8vh;
+  margin-bottom: 0vh;
+}
+
+#header .container {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: repeat;
+  background-image: url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 2000 1400%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cmask id=%22b%22 x=%220%22 y=%220%22 width=%222000%22 height=%221400%22%3E%3Cpath fill=%22url(%23a)%22 d=%22M0 0h2000v1400H0z%22%2F%3E%3C%2Fmask%3E%3Cpath fill=%22%2327292a%22 d=%22M0 0h2000v1400H0z%22%2F%3E%3Cg style=%22transform-origin:center center%22 stroke=%22%231f2122%22 stroke-width=%221.6%22 mask=%22url(%23b)%22%3E%3Cpath fill=%22none%22 d=%22M0 0h61v61H0zM488 0h61v61h-61zM793 0h61v61h-61zM976 0h61v61h-61zM1281 0h61v61h-61zM1647 0h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122f5%22 d=%22M61 61h61v61H61z%22%2F%3E%3Cpath fill=%22%231f21221f%22 d=%22M366 61h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212285%22 d=%22M427 61h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M610 61h61v61h-61zM793 61h61v61h-61zM1281 61h61v61h-61zM1403 61h61v61h-61zM1891 61h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a7%22 d=%22M1952 61h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122ac%22 d=%22M0 122h61v61H0z%22%2F%3E%3Cpath fill=%22none%22 d=%22M183 122h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122bf%22 d=%22M366 122h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212299%22 d=%22M1037 122h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1220 122h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212239%22 d=%22M1647 122h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a6%22 d=%22M244 183h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M305 183h61v61h-61zM488 183h61v61h-61zM549 183h61v61h-61zM671 183h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212237%22 d=%22M732 183h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1525 183h61v61h-61zM1586 183h61v61h-61zM1708 183h61v61h-61zM1891 183h61v61h-61zM122 244h61v61h-61zM183 244h61v61h-61zM305 244h61v61h-61zM427 244h61v61h-61zM915 244h61v61h-61zM1464 244h61v61h-61zM1586 244h61v61h-61zM183 305h61v61h-61zM610 305h61v61h-61zM793 305h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122c5%22 d=%22M1220 305h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212234%22 d=%22M1342 305h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122fb%22 d=%22M1464 305h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122bc%22 d=%22M1525 305h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1891 305h61v61h-61zM671 366h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122c6%22 d=%22M1647 366h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1830 366h61v61h-61zM366 427h61v61h-61zM610 427h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21226d%22 d=%22M671 427h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a2%22 d=%22M732 427h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122e9%22 d=%22M1220 427h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a2%22 d=%22M1281 427h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1464 427h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122aa%22 d=%22M305 488h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M427 488h61v61h-61zM1037 488h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212213%22 d=%22M1464 488h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1830 488h61v61h-61zM183 549h61v61h-61zM244 549h61v61h-61zM305 549h61v61h-61zM610 549h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212255%22 d=%22M671 549h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M854 549h61v61h-61zM1220 549h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212215%22 d=%22M1464 549h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M610 610h61v61h-61zM854 610h61v61h-61zM1281 610h61v61h-61zM1464 610h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122e8%22 d=%22M1708 610h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21226b%22 d=%22M1952 610h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M427 671h61v61h-61zM854 671h61v61h-61zM1159 671h61v61h-61zM1281 671h61v61h-61zM1464 671h61v61h-61zM1586 671h61v61h-61zM1769 671h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21220e%22 d=%22M1830 671h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1952 671h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212227%22 d=%22M1159 732h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M122 793h61v61h-61zM488 793h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122b5%22 d=%22M1220 793h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212257%22 d=%22M1342 793h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1464 793h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122f0%22 d=%22M1830 793h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122ae%22 d=%22M122 854h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M549 854h61v61h-61zM732 854h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21221a%22 d=%22M854 854h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1586 854h61v61h-61zM1647 854h61v61h-61zM244 915h61v61h-61zM427 915h61v61h-61zM1464 915h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212299%22 d=%22M183 976h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M427 976h61v61h-61zM488 976h61v61h-61zM671 976h61v61h-61zM854 976h61v61h-61zM1403 976h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21227b%22 d=%22M1464 976h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a6%22 d=%22M732 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1098 1037h61v61h-61zM1159 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212239%22 d=%22M1281 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122cd%22 d=%22M1464 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1586 1037h61v61h-61zM1830 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212245%22 d=%22M1952 1037h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M671 1098h61v61h-61zM732 1098h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122bf%22 d=%22M1098 1098h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21225e%22 d=%22M1403 1098h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122ad%22 d=%22M1464 1098h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1586 1098h61v61h-61zM1952 1098h61v61h-61zM183 1159h61v61h-61zM610 1159h61v61h-61zM854 1159h61v61h-61zM915 1159h61v61h-61zM976 1159h61v61h-61zM1708 1159h61v61h-61zM1830 1159h61v61h-61zM366 1220h61v61h-61zM671 1220h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f212207%22 d=%22M1037 1220h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1098 1220h61v61h-61zM1647 1220h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122cb%22 d=%22M1952 1220h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122a5%22 d=%22M61 1281h61v61H61z%22%2F%3E%3Cpath fill=%22%231f2122f4%22 d=%22M488 1281h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M732 1281h61v61h-61zM793 1281h61v61h-61zM1281 1281h61v61h-61zM1342 1281h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122f9%22 d=%22M1464 1281h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M1647 1281h61v61h-61zM1769 1281h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f2122c8%22 d=%22M183 1342h61v61h-61z%22%2F%3E%3Cpath fill=%22none%22 d=%22M488 1342h61v61h-61zM793 1342h61v61h-61zM1220 1342h61v61h-61zM1586 1342h61v61h-61z%22%2F%3E%3Cpath fill=%22%231f21225d%22 d=%22M1708 1342h61v61h-61z%22%2F%3E%3C%2Fg%3E%3Cdefs%3E%3CradialGradient id=%22a%22%3E%3Cstop offset=%220%22 stop-color=%22%23fff%22%2F%3E%3Cstop offset=%221%22 stop-color=%22%23fff%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
 }
 
 #header .container {
@@ -281,11 +292,13 @@ Pre-loader Style
     margin-top: 15px;
   }
 
-  /* #header .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
+  #header img {
+    max-width: 276px;
+  }
+
+  #header .container {
+    border-radius: 0;
+  }
 }
 
 /* Header Top */
@@ -352,7 +365,7 @@ Pre-loader Style
 }
 
 /*--------------------------------------------------------------
-# Navigation Menu
+# MARK Navigation Menu
 --------------------------------------------------------------*/
 /**
 * Desktop Navigation 
@@ -361,7 +374,6 @@ Pre-loader Style
   padding: 0;
   margin-top: 35px;
 }
-
 
 
 .navbar ul {
@@ -414,19 +426,6 @@ Pre-loader Style
   transition: all .6s ease-in-out 0s;
 }
 
-/* 
-.navbar a:before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: -4px;
-  left: 0;
-  background-color: #18d26e;
-  visibility: hidden;
-  width: 0px;
-  transition: all 0.3s ease-in-out 0s;
-} */
 
 .navbar a:hover:before,
 .navbar li:hover>a:before,
@@ -440,6 +439,19 @@ Pre-loader Style
 .navbar li:hover>a {
   color: #fff;
 }
+
+@media (min-width: 992px) {
+  .stickyNav {
+    position: fixed;
+    bottom: 0;
+    border-radius: 15px;
+    background: #353b3e;
+    padding: 15px 30px;
+    animation: 0.5s ease-in-out;
+    margin-bottom: 15px;
+  }
+}
+
 
 /**
 * Mobile Navigation 
@@ -513,24 +525,26 @@ Pre-loader Style
   position: relative;
 }
 
+
 /*--------------------------------------------------------------
-# Sections General
+# MARK Sections General 
 --------------------------------------------------------------*/
 section {
   overflow: hidden;
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   top: 140px;
   bottom: 100%;
-  opacity: 0;
+  /* opacity: 0; */
   transition: ease-in-out 0.4s;
   z-index: 2;
+  margin: 50px 0;
 }
 
 section.section-show {
   top: 100px;
   bottom: auto;
-  opacity: 1;
+  /* opacity: 1; */
   padding-bottom: 45px;
 }
 
@@ -541,13 +555,12 @@ section .container {
 }
 
 @media (max-width: 768px) {
-  section {
-    top: 120px;
+
+  section .container {
+    width: 90vw;
   }
 
-  section.section-show {
-    top: 80px;
-  }
+
 }
 
 .section-title h2 {
@@ -574,231 +587,37 @@ section .container {
 }
 
 /*--------------------------------------------------------------
-# About
+# MARK technologies
 --------------------------------------------------------------*/
-.about-me .content h3 {
-  font-weight: 700;
-  font-size: 26px;
+/* .technologies-me .content {
+  padding: 40px;
+  background: #1F2122;
+  border-radius: 15px;
+} */
+
+.technologies-me .section-title p {
   color: #18d26e;
 }
 
-.about-me .content ul {
-  list-style: none;
-  padding: 0;
+.technologies-icon i {
+  margin: 10px;
+  font-size: 2rem;
 }
 
-.about-me .content ul li {
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.about-me .content ul strong {
-  margin-right: 10px;
-}
-
-.about-me .content ul i {
-  font-size: 16px;
-  margin-right: 5px;
-  color: #18d26e;
-  line-height: 0;
-}
-
-.about-me .content p:last-child {
+.technologies-me .content p:last-child {
   margin-bottom: 0;
 }
 
-/*--------------------------------------------------------------
-# Counts
---------------------------------------------------------------*/
-.counts {
-  padding: 70px 0 60px;
+@media (max-width: 992px) {
+  .technologies-me img {
+    display: none;
+  }
 }
 
-.counts .count-box {
-  padding: 30px 30px 25px 30px;
-  width: 100%;
-  position: relative;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.08);
-}
 
-.counts .count-box i {
-  position: absolute;
-  top: -25px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 24px;
-  background: rgba(255, 255, 255, 0.1);
-  padding: 12px;
-  color: #18d26e;
-  border-radius: 50px;
-  line-height: 0;
-}
-
-.counts .count-box span {
-  font-size: 36px;
-  display: block;
-  font-weight: 600;
-  color: #fff;
-}
-
-.counts .count-box p {
-  padding: 0;
-  margin: 0;
-  font-family: "Raleway", sans-serif;
-  font-size: 14px;
-}
 
 /*--------------------------------------------------------------
-# Skills
---------------------------------------------------------------*/
-.skills .progress {
-  height: 60px;
-  display: block;
-  background: none;
-  border-radius: 0;
-}
-
-.skills .progress .skill {
-  padding: 10px 0;
-  margin: 0;
-  text-transform: uppercase;
-  display: block;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  color: #fff;
-}
-
-.skills .progress .skill .val {
-  float: right;
-  font-style: normal;
-}
-
-.skills .progress-bar-wrap {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-.skills .progress-bar {
-  width: 1px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #18d26e;
-}
-
-/*--------------------------------------------------------------
-# Interests
---------------------------------------------------------------*/
-.interests .icon-box {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.08);
-  transition: ease-in-out 0.3s;
-}
-
-.interests .icon-box i {
-  font-size: 32px;
-  padding-right: 10px;
-  line-height: 1;
-}
-
-.interests .icon-box h3 {
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-size: 16px;
-  color: #fff;
-}
-
-.interests .icon-box:hover {
-  background: rgba(255, 255, 255, 0.12);
-}
-
-/*--------------------------------------------------------------
-# Testimonials
---------------------------------------------------------------*/
-.testimonials .testimonials-carousel,
-.testimonials .testimonials-slider {
-  overflow: hidden;
-}
-
-.testimonials .testimonial-item {
-  box-sizing: content-box;
-  min-height: 320px;
-}
-
-.testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
-  margin: -40px 0 0 40px;
-  position: relative;
-  z-index: 2;
-  border: 6px solid rgba(255, 255, 255, 0.12);
-}
-
-.testimonials .testimonial-item h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px 0 5px 45px;
-  color: #fff;
-}
-
-.testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0 0 0 45px;
-}
-
-.testimonials .testimonial-item .quote-icon-left,
-.testimonials .testimonial-item .quote-icon-right {
-  color: rgba(255, 255, 255, 0.25);
-  font-size: 26px;
-}
-
-.testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-
-.testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-}
-
-.testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 15px 0 15px;
-  padding: 20px 20px 60px 20px;
-  background: rgba(255, 255, 255, 0.1);
-  position: relative;
-  border-radius: 6px;
-  position: relative;
-  z-index: 1;
-}
-
-.testimonials .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  opacity: 1;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
-}
-
-/*--------------------------------------------------------------
-# Resume
+# MARK Resume
 --------------------------------------------------------------*/
 .container .isolation {
   padding: 20px;
@@ -865,88 +684,9 @@ section .container {
   border: 2px solid #18d26e;
 }
 
-/*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
-.services .icon-box {
-  text-align: center;
-  background: rgba(204, 204, 204, 0.1);
-  padding: 80px 20px;
-  transition: all ease-in-out 0.3s;
-}
-
-.services .icon-box .icon {
-  margin: 0 auto;
-  width: 64px;
-  height: 64px;
-  background: #18d26e;
-  border-radius: 5px;
-  transition: all 0.3s ease-out 0s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  transform-style: preserve-3d;
-}
-
-.services .icon-box .icon i {
-  color: #fff;
-  font-size: 28px;
-}
-
-.services .icon-box .icon::before {
-  position: absolute;
-  content: "";
-  left: -8px;
-  top: -8px;
-  height: 100%;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 5px;
-  transition: all 0.3s ease-out 0s;
-  transform: translateZ(-1px);
-}
-
-.services .icon-box h4 {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 24px;
-}
-
-.services .icon-box h4 a {
-  color: #fff;
-}
-
-.services .icon-box p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-
-.services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
-}
-
-.services .icon-box:hover .icon {
-  background: #fff;
-}
-
-.services .icon-box:hover .icon i {
-  color: #18d26e;
-}
-
-.services .icon-box:hover .icon::before {
-  background: #35e888;
-}
-
-.services .icon-box:hover h4 a,
-.services .icon-box:hover p {
-  color: #fff;
-}
 
 /*--------------------------------------------------------------
-# Portfolio
+# MARK Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin-bottom: 30px;
@@ -1104,7 +844,7 @@ section .container {
 }
 
 /*--------------------------------------------------------------
-# Portfolio Details
+# MARK Portfolio Details
 --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
@@ -1177,23 +917,32 @@ section .container {
 
 
 /*--------------------------------------------------------------
-# Contact
+# MARK Contact
 --------------------------------------------------------------*/
-.contact .content h3 {
+.contact .section-title h1 {
   font-weight: 700;
-  font-size: 26px;
+  /* font-size: 26px; */
   color: #18d26e;
+  text-align: center;
+  margin: 10px 0;
 }
 
 .contact img {
   align-items: center;
-  border: 1px solid #18d26e;
+  border: 1px solid hsl(148, 79%, 46%);
   border-radius: 50%;
 }
 
 .contact .social-links {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+.links {
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -1203,19 +952,18 @@ section .container {
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
   border-radius: 15px;
-  width: 170px;
-  height: 145px;
+  width: 125px;
+  height: 115px;
   justify-content: space-evenly;
   flex-direction: column;
-  margin: 17px;
+  margin: 10px;
   align-items: center;
   flex-wrap: wrap;
 }
 
 .contact .social-links a i {
-  padding-right: 10px;
   font-size: 30px;
-
+  justify-content: center;
 }
 
 .contact .social-links a:hover {
@@ -1224,13 +972,10 @@ section .container {
 
 @media (max-width: 992px) {
 
-  .contact .content h3 {
-    text-align: center;
-  }
-
-  .contact .social-links {
+  .links {
     margin-top: 15px;
   }
+
 
   .contact .content {
     padding: 10px !important;
@@ -1243,10 +988,54 @@ section .container {
     margin: auto;
   }
 
+  .contact .social-links a {
+    width: 110px;
+    height: 100px;
+    font-size: 18px;
+  }
+
   div:has(>.connect-profile) {
     display: flex;
     justify-content: space-around;
   }
+}
 
+.contact .footer {
+  text-align: center;
+  margin-top: 30px;
+}
 
+.contact .footer span {
+  color: #18d26e;
+}
+
+.contact form {
+  padding: 30px 10%;
+}
+
+form .form-control {
+  background: #353b3e;
+  border: 1px #27292A solid !important;
+  color: #fff;
+}
+
+form .form-control:focus {
+  background: #353b3e;
+  border: 1px #27292A solid !important;
+  color: #fff;
+}
+
+form .form-control::placeholder {
+  color: #fff;
+}
+
+form button {
+  margin: 20px 0;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+form button:hover {
+  background: #18d26e !important;
+  color: #000 !important;
 }
