--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ Pre-loader Style
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #e75e8d;
+  background: #ffffff;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -144,7 +144,7 @@ Pre-loader Style
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #e75e8d;
+  background: #ffffff;
   border-radius: 50%;
 }
 
